--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://www.paypal.com/sdk/js?currency=USD&client-id=AbjPNne4Vqwk8Gft40c5-uHnCMdLFbpz_-cQ2IArn2SEdoc6h7KDxigMvBZXFmxoIWzTZAX_aBAdki6N"></script>
 </body>
 </html>
